--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ description: >
 version:          1.0
 gitbook_version:  3.2.3
 
-url:              'https://6iguana.github.io/'
-baseurl:          '/home'
+url:              "https://6iguana.github.io/"
+baseurl:          "/home"
 rss:              RSS
 
 toc:
