--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ version:          1.0
 gitbook_version:  3.2.3
 
 url:              "https://6iguana.github.io/"
-baseurl:          "/home"
+# baseurl:          "/home"
 rss:              RSS
 
 toc:
